avoid facebook ssl warning

--- a/kerdns/dnsmasq.conf
+++ b/kerdns/dnsmasq.conf
@@ -1,7 +1,7 @@
 #facebook
 address=/apps.facebook.com/69.63.190.26
-address=/www.facebook.com/69.63.189.31
-address=/facebook.com/69.63.189.11
+address=/www.facebook.com/69.171.229.15
+address=/upload.facebook.com/66.220.146.77
 address=/login.facebook.com/69.63.181.24
 address=/s-static.ak.facebook.com/125.252.218.110 
 address=/api.facebook.com/69.171.228.19
