--- a/kerdns/dnsmasq.conf
+++ b/kerdns/dnsmasq.conf
@@ -1,4 +1,4 @@
-#facebook
+address=/doubleclick.net/127.0.0.1
 address=/apps.facebook.com/69.63.190.26
 address=/www.facebook.com/69.171.229.15
 address=/upload.facebook.com/66.220.146.77
@@ -10,17 +10,79 @@ address=/ssl.facebook.com/66.220.147.60
 address=/developers.facebook.com/66.220.147.57
 address=/api-read.facebook.com/66.220.149.48
 address=/graph.facebook.com/66.220.146.86
-
-#google
-address=/appspot.com/203.208.46.145
-address=/googleusercontent.com/203.208.46.179
-
-#twitter
+address=/spreadsheets.google.com/203.208.46.179
+address=/sites.google.com/203.208.46.179
+address=/map.google.com/203.208.46.179
+address=/maps.google.com/203.208.46.179
+address=/ajax.googleapis.com/203.208.46.179
+address=/maps-api-ssl.google.com/203.208.46.179
+address=/translate.google.com/203.208.46.179
+address=/0-focus-opensocial.googleusercontent.com/203.208.46.179
+address=/images6-focus-opensocial.googleusercontent.com/203.208.46.179
+address=/images5-focus-opensocial.googleusercontent.com/203.208.46.179
+address=/images4-focus-opensocial.googleusercontent.com/203.208.46.179
+address=/images3-focus-opensocial.googleusercontent.com/203.208.46.179
+address=/images2-focus-opensocial.googleusercontent.com/203.208.46.179
+address=/images1-focus-opensocial.googleusercontent.com/203.208.46.179
+address=/lh6.googleusercontent.com/203.208.46.179
+address=/lh5.googleusercontent.com/203.208.46.179
+address=/lh3.googleusercontent.com/203.208.46.179
+address=/lh2.googleusercontent.com/203.208.46.179
+address=/lh1.googleusercontent.com/203.208.46.179
+address=/lh4.googleusercontent.com/203.208.46.179
+address=/webcache.googleusercontent.com/203.208.46.179
+address=/mail.google.com/203.208.46.179
+address=/www.google.com.hk/203.208.46.179
+address=/www.google.com/203.208.46.179
+address=/picasaweb.google.com/203.208.46.179
+address=/labs.google.com/203.208.46.179
+address=/www.googlelabs.com/203.208.46.179
+address=/docs.google.com/203.208.46.179
+address=/profiles.google.com/203.208.46.179
+address=/services.google.com/203.208.46.179
+address=/clients4.google.com/203.208.46.179
+address=/clients2.google.com/203.208.46.179
+address=/chrome.google.com/203.208.46.179
+address=/tools.google.com/203.208.46.179
+address=/ssl.gstatic.com/203.208.46.179
+address=/clients2.googleusercontent.com/203.208.46.179
+address=/clients1.googleusercontent.com/203.208.46.179
+address=/clients3.googleusercontent.com/203.208.46.179
+address=/clients4.googleusercontent.com/203.208.46.179
+address=/www.google.com/203.208.46.179
+address=/s6.googleusercontent.com/203.208.46.179
+address=/s5.googleusercontent.com/203.208.46.179
+address=/s4.googleusercontent.com/203.208.46.179
+address=/s3.googleusercontent.com/203.208.46.179
+address=/s2.googleusercontent.com/203.208.46.179
+address=/s1.googleusercontent.com/203.208.46.179
+address=/ditu.google.com/203.208.46.179
+address=/maps-api-ssl.google.com/203.208.46.179
+address=/docs.google.com/203.208.46.179
+address=/pop.gmail.com/203.208.46.179
+address=/gmail.com/203.208.46.179
+address=/scholar.l.google.com/203.208.46.179
+address=/news.google.com/203.208.46.179
+address=/video.google.com/203.208.46.179
+address=/translate.google.com/203.208.46.179
+address=/profiles.google.com/203.208.46.179
+address=/mail-attachment.googleusercontent.com/203.208.46.179
+address=/market.android.com/203.208.46.179
+address=/talkgadget.google.com/203.208.46.179
+address=/talk.google.com/203.208.46.179
+address=/plus.google.com/203.208.46.143
+address=/developers.google.com/203.208.46.143
+address=/developer.android.com/203.208.46.143
+address=/code.google.com/203.208.46.143
+address=/uploads.code.google.com/203.208.46.143
+address=/www.gstatic.com/203.208.46.143
+address=/accounts.google.com/203.208.46.143
 address=/t.co/106.187.39.23
 address=/twitter.com/199.59.148.15
 address=/thepiratebay.org/106.187.39.23
-
-#tumblr 
+address=/www.dropbox.com/174.36.30.71
+address=/dl.dropbox.com/75.101.129.115
+address=/dropbox.com/174.36.30.67
 alias=174.121.98.156,174.121.194.34 
 alias=50.22.53.157,174.121.194.34 
 alias=50.22.53.155,174.121.194.34 
