--- a/kerdns/dnsmasq.conf
+++ b/kerdns/dnsmasq.conf
@@ -10,6 +10,19 @@ address=/ssl.facebook.com/66.220.147.60
 address=/developers.facebook.com/66.220.147.57
 address=/api-read.facebook.com/66.220.149.48
 address=/graph.facebook.com/66.220.146.86
+address=/search.twitter.com/199.59.148.201
+address=/userstream.twitter.com/199.59.148.139
+address=/platform.twitter.com/184.29.36.124
+address=/platform0.twitter.com/219.76.10.138
+address=/help.twitter.com/199.59.148.206
+address=/support.twitter.com/199.59.148.206
+address=/si0.twimg.com/209.84.4.102
+address=/si1.twimg.com/209.84.4.102
+address=/si2.twimg.com/209.84.4.102
+address=/si3.twimg.com/209.84.4.102
+address=/si4.twimg.com/209.84.4.102
+address=/si5.twimg.com/209.84.4.102
+address=/.appspot.com/203.208.46.145
 address=/spreadsheets.google.com/203.208.46.179
 address=/sites.google.com/203.208.46.179
 address=/map.google.com/203.208.46.179
@@ -30,6 +43,7 @@ address=/lh3.googleusercontent.com/203.208.46.179
 address=/lh2.googleusercontent.com/203.208.46.179
 address=/lh1.googleusercontent.com/203.208.46.179
 address=/lh4.googleusercontent.com/203.208.46.179
+address=/groups.google.com/173.194.64.100
 address=/webcache.googleusercontent.com/203.208.46.179
 address=/mail.google.com/203.208.46.179
 address=/www.google.com.hk/203.208.46.179
@@ -59,8 +73,9 @@ address=/s1.googleusercontent.com/203.208.46.179
 address=/ditu.google.com/203.208.46.179
 address=/maps-api-ssl.google.com/203.208.46.179
 address=/docs.google.com/203.208.46.179
-address=/pop.gmail.com/203.208.46.179
-address=/gmail.com/203.208.46.179
+address=/pop.gmail.com/74.125.65.108
+address=/smtp.gmail.com/74.125.65.108
+address=/gmail.com/74.125.65.108
 address=/scholar.l.google.com/203.208.46.179
 address=/news.google.com/203.208.46.179
 address=/video.google.com/203.208.46.179
@@ -68,8 +83,8 @@ address=/translate.google.com/203.208.46.179
 address=/profiles.google.com/203.208.46.179
 address=/mail-attachment.googleusercontent.com/203.208.46.179
 address=/market.android.com/203.208.46.179
-address=/talkgadget.google.com/203.208.46.179
-address=/talk.google.com/203.208.46.179
+address=/talkgadget.google.com/209.85.175.125
+address=/talk.google.com/209.85.175.125
 address=/plus.google.com/203.208.46.143
 address=/developers.google.com/203.208.46.143
 address=/developer.android.com/203.208.46.143
@@ -77,14 +92,21 @@ address=/code.google.com/203.208.46.143
 address=/uploads.code.google.com/203.208.46.143
 address=/www.gstatic.com/203.208.46.143
 address=/accounts.google.com/203.208.46.143
+address=/talk.l.google.com/74.125.71.125
+address=/talk.google.com/74.125.71.125
+server=/google.com/208.67.222.222
 address=/t.co/106.187.39.23
 address=/twitter.com/199.59.148.15
 address=/thepiratebay.org/106.187.39.23
-address=/www.dropbox.com/174.36.30.71
-address=/dl.dropbox.com/75.101.129.115
-address=/dropbox.com/174.36.30.67
+ 
 alias=174.121.98.156,174.121.194.34 
 alias=50.22.53.157,174.121.194.34 
 alias=50.22.53.155,174.121.194.34 
 alias=72.32.231.8,174.121.194.34
-
+mx-host=gmail.com,alt1.gmail-smtp-in.l.google.com,10
+domain=google.com
+srv-host=_xmpp-client._tcp.gmail.com,alt1.xmpp.l.google.com,5222,20
+srv-host=_xmpp-client._tcp.gmail.com,alt2.xmpp.l.google.com,5222,20
+srv-host=_xmpp-client._tcp.gmail.com,alt3.xmpp.l.google.com,5222,20
+srv-host=_xmpp-client._tcp.gmail.com,alt4.xmpp.l.google.com,5222,20
+srv-host=_xmpp-client._tcp.gmail.com,xmpp.l.google.com,5222,5
