--- a/kerdns/dnsmasq.conf
+++ b/kerdns/dnsmasq.conf
@@ -1,5 +1,5 @@
 address=/doubleclick.net/127.0.0.1
-address=/apps.facebook.com/69.63.190.26
+address=/apps.facebook.com/69.171.224.30
 address=/www.facebook.com/69.171.229.15
 address=/upload.facebook.com/66.220.146.77
 address=/login.facebook.com/69.63.181.24
@@ -10,6 +10,7 @@ address=/ssl.facebook.com/66.220.147.60
 address=/developers.facebook.com/66.220.147.57
 address=/api-read.facebook.com/66.220.149.48
 address=/graph.facebook.com/66.220.146.86
+address=/connect.facebook.com/69.171.229.13
 address=/search.twitter.com/199.59.148.201
 address=/userstream.twitter.com/199.59.148.139
 address=/platform.twitter.com/184.29.36.124
@@ -23,6 +24,7 @@ address=/si3.twimg.com/209.84.4.102
 address=/si4.twimg.com/209.84.4.102
 address=/si5.twimg.com/209.84.4.102
 address=/.appspot.com/203.208.46.145
+address=/gmail.com/203.208.46.179
 address=/spreadsheets.google.com/203.208.46.179
 address=/sites.google.com/203.208.46.179
 address=/map.google.com/203.208.46.179
@@ -73,9 +75,6 @@ address=/s1.googleusercontent.com/203.208.46.179
 address=/ditu.google.com/203.208.46.179
 address=/maps-api-ssl.google.com/203.208.46.179
 address=/docs.google.com/203.208.46.179
-address=/pop.gmail.com/74.125.65.108
-address=/smtp.gmail.com/74.125.65.108
-address=/gmail.com/74.125.65.108
 address=/scholar.l.google.com/203.208.46.179
 address=/news.google.com/203.208.46.179
 address=/video.google.com/203.208.46.179
@@ -97,12 +96,12 @@ address=/talk.google.com/74.125.71.125
 server=/google.com/208.67.222.222
 address=/t.co/106.187.39.23
 address=/twitter.com/199.59.148.15
-address=/thepiratebay.org/106.187.39.23
  
 alias=174.121.98.156,174.121.194.34 
 alias=50.22.53.157,174.121.194.34 
 alias=50.22.53.155,174.121.194.34 
 alias=72.32.231.8,174.121.194.34
+alias=174.121.66.230,174.121.194.34
 mx-host=gmail.com,alt1.gmail-smtp-in.l.google.com,10
 domain=google.com
 srv-host=_xmpp-client._tcp.gmail.com,alt1.xmpp.l.google.com,5222,20
